[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-traits = "0.2"
rand = "0.8.5"
crossterm = "0.26.1"
tokio = {version="1.28.2", features=["full"]}
rodio = "0.17.1"